@@ -13,6 +13,9 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.client.HttpClientErrorException;
+import org.springframework.web.client.HttpServerErrorException;
+import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.reactive.function.client.WebClient;
 import org.springframework.web.util.UriComponentsBuilder;
@@ -73,74 +76,125 @@ public class AladinService {
         public SyncResult setErrorOccurred(boolean errorOccurred) { this.errorOccurred = errorOccurred; return this; }
     }
 
+    /**
+     * 알라딘 API를 통해 책을 검색하거나 목록을 조회합니다.
+     * 검색어가 있으면 키워드 검색, 없으면 정렬 기준에 따라 신간 또는 베스트셀러 목록을 반환합니다.
+     */
     public PaginatedAladinResponse searchBooks(String query, int page, int size, String categoryId, String sort) {
-        if (query == null || query.trim().isEmpty()) {
-            return new PaginatedAladinResponse(Collections.emptyList(), 0, page, size);
-        }
-
         String effectiveSort = sort != null && List.of("PublishTime", "SalesPoint", "Title").contains(sort)
                 ? sort
-                : "PublishTime";
+                : "PublishTime"; // 기본 정렬은 최신순
+        String effectiveCategoryId = (categoryId != null && !categoryId.trim().isEmpty())
+                ? categoryId
+                : "0"; // 알라딘 API에서 0은 보통 전체 국내도서를 의미 (문서 확인 필요)
 
-        UriComponentsBuilder uriBuilder = UriComponentsBuilder
-                .fromUriString(apiUrl)
-                .queryParam("TTBKey", apiKey)
-                .queryParam("Query", query)
-                .queryParam("QueryType", "Keyword")
-                .queryParam("MaxResults", size)
-                .queryParam("start", page)
-                .queryParam("SearchTarget", "Book") // eBook -> Book
-                .queryParam("output", "js")
-                .queryParam("Version", "20131101");
+        UriComponentsBuilder uriBuilder;
+        String finalApiUrl; // 사용할 알라딘 API의 기본 URL (ItemSearch.aspx 또는 ItemList.aspx)
 
-        if (categoryId != null && !categoryId.trim().isEmpty()) {
-            uriBuilder.queryParam("CategoryId", categoryId);
+        // --- 검색어 유무 및 정렬 기준에 따른 API 분기 ---
+        if (query == null || query.trim().isEmpty()) {
+            // 검색어가 없을 때
+            finalApiUrl = apiListUrl; // ItemList.aspx 사용
+            uriBuilder = UriComponentsBuilder.fromUriString(finalApiUrl)
+                    .queryParam("TTBKey", apiKey)
+                    .queryParam("MaxResults", size)
+                    .queryParam("start", page)
+                    .queryParam("SearchTarget", "eBook") // 또는 "eBook" (프로젝트 대상에 맞게)
+                    .queryParam("output", "js")
+                    .queryParam("Version", "20131101")
+                    .queryParam("CategoryId", effectiveCategoryId);
+
+            if ("PublishTime".equals(effectiveSort)) {
+                log.info("검색어 없음 + 최신순 정렬: Aladin 신간 목록 API 호출 (ItemNewSpecial)");
+                uriBuilder.queryParam("QueryType", "ItemNewSpecial");
+                // ItemList.aspx의 ItemNewAll은 자체적으로 최신순이므로 별도 Sort 파라미터 필요 없을 수 있음
+                // 필요하다면 알라딘 문서 확인 후 Sort 파라미터 추가
+            } else if ("SalesPoint".equals(effectiveSort)) {
+                log.info("검색어 없음 + 판매량순 정렬: Aladin 베스트셀러 API 호출 (Bestseller)");
+                uriBuilder.queryParam("QueryType", "Bestseller");
+                // ItemList.aspx의 Bestseller는 자체적으로 판매량순이므로 별도 Sort 파라미터 필요 없을 수 있음
+            } else if ("Title".equals(effectiveSort)) {
+                log.info("검색어 없음 + 가나다순 정렬: 처리 방식 결정 필요");
+                uriBuilder.queryParam("QueryType", "ItemNewSpecial");
+                // ★★★ 알라딘 ItemList API가 'Title' 정렬을 지원하는지 확인 필요 ★★★
+                // 1. 지원한다면:
+                // uriBuilder.queryParam("QueryType", "ItemNewAll"); // 또는 다른 적절한 QueryType
+                // uriBuilder.queryParam("Sort", "Title"); // 알라딘 API의 실제 파라미터명 사용
+                // 2. 지원하지 않는다면:
+                //  - 기본 정렬(예: 최신순)으로 대체하고 로그 남기기
+                //  - 또는 빈 결과를 반환하고 프론트에서 안내 메시지 표시
+                // 여기서는 예시로 신간 목록(기본 최신순)을 반환하거나,
+                // 특정 QueryType(예: 그냥 ItemList)에서 Title 정렬이 가능하다면 해당 옵션 사용
+                uriBuilder.queryParam("QueryType", "ItemNewAll"); // 예시: 신간을 대상으로 가나다순 시도 (API 지원 여부 확인)
+                // uriBuilder.queryParam("Sort", "Title"); // API가 지원한다면
+                log.warn("검색어 없이 가나다순 정렬 시, Aladin ItemList API의 Title 정렬 지원 여부에 따라 결과가 달라질 수 있습니다.");
+            } else {
+                // 기타 정렬 또는 기본값 (최신순)
+                log.info("검색어 없음 + 기본/기타 정렬: Aladin 신간 목록 API 호출 (ItemNewAll)");
+                uriBuilder.queryParam("QueryType", "ItemNewAll");
+            }
+        } else {
+            // 검색어가 있을 때 (기존 로직 유지)
+            finalApiUrl = apiUrl; // ItemSearch.aspx 사용
+            log.info("검색어 있음: Aladin 키워드 검색 API 호출. Query: {}, Sort: {}", query, effectiveSort);
+            uriBuilder = UriComponentsBuilder.fromUriString(finalApiUrl)
+                    .queryParam("TTBKey", apiKey)
+                    .queryParam("Query", query)
+                    .queryParam("QueryType", "Keyword")
+                    .queryParam("MaxResults", size)
+                    .queryParam("start", page)
+                    .queryParam("SearchTarget", "eBook") // 또는 "eBook"
+                    .queryParam("output", "js")
+                    .queryParam("Version", "20131101")
+                    .queryParam("CategoryId", effectiveCategoryId)
+                    .queryParam("Sort", effectiveSort); // 키워드 검색은 Sort 파라미터 지원
         }
 
-        uriBuilder.queryParam("Sort", effectiveSort);
-
-        URI uri = uriBuilder
-                .encode(StandardCharsets.UTF_8)
-                .build()
-                .toUri();
-
-        log.info("Calling Aladin API with URL: {}", uri.toString());
+        URI uri = uriBuilder.encode(StandardCharsets.UTF_8).build().toUri();
+        log.info("최종 호출 Aladin API URL: {}", uri.toString());
 
         try {
             AladinApiResponse response = restTemplate.getForObject(uri, AladinApiResponse.class);
-
             if (response != null) {
                 List<AladinBookItem> books = (response.getItem() != null) ? response.getItem() : Collections.emptyList();
-                log.info("Aladin API response: totalResults={}, itemCount={}", response.getTotalResults(), books.size());
-                return new PaginatedAladinResponse(books, response.getTotalResults(), page, size);
+                int total = response.getTotalResults() != null ? response.getTotalResults() : 0;
+                // 검색어 없는 ItemList API의 경우 totalResults가 정확하지 않거나 매우 클 수 있음
+                // 프론트엔드 페이지네이션과 사용자 경험을 위해 조정 필요할 수 있음
+                if ((query == null || query.trim().isEmpty()) && total == 0 && !books.isEmpty()) {
+                    // 예: ItemList API가 totalResults를 0으로 주지만 실제론 더 많은 결과가 있을 수 있는 경우
+                    // total = books.size() * 20; // 임의로 더 많은 결과가 있다고 가정 (페이지네이션 테스트용)
+                    log.warn("검색어 없는 목록 조회 시 API totalResults가 0이지만, 아이템이 존재합니다. 페이지네이션에 영향이 있을 수 있습니다.");
+                }
+                log.info("Aladin API 응답: totalResults={}, 현재 페이지 아이템 수={}", total, books.size());
+                return new PaginatedAladinResponse(books, total, page, size);
             } else {
-                log.warn("알라딘 API 응답이 null입니다.");
+                log.warn("알라딘 API 응답이 null입니다. URL: {}", uri);
                 return new PaginatedAladinResponse(Collections.emptyList(), 0, page, size);
             }
         } catch (Exception e) {
-            log.error("알라딘 API 호출 중 오류 발생: {}", e.getMessage(), e);
+            log.error("알라딘 API 호출 중 오류 발생. URL: {}. Error: {}", uri, e.getMessage(), e);
             return new PaginatedAladinResponse(Collections.emptyList(), 0, page, size);
         }
     }
 
-    public PaginatedAladinResponse getBestsellers(int page, int size, String categoryId, String sort) {
-        String effectiveSort = sort != null && List.of("PublishTime", "SalesPoint", "Title").contains(sort)
-                ? sort
-                : "PublishTime";
-        String effectiveCategoryId = (categoryId != null && !categoryId.trim().isEmpty())
-                ? categoryId
-                : String.valueOf(DEFAULT_BESTSELLER_CATEGORY_ID);
-
-        return fetchAladinPage(Integer.parseInt(effectiveCategoryId), page)
-                .map(response -> {
-                    List<AladinBookItem> books = (response.getItem() != null) ? response.getItem() : Collections.emptyList();
-                    Integer totalResults = response.getTotalResults();
-                    int total = totalResults != null ? totalResults : books.size();
-                    books = books.size() > size ? books.subList(0, size) : books;
-                    return new PaginatedAladinResponse(books, total, page, size);
-                })
-                .block();
-    }
+//    public PaginatedAladinResponse getBestsellers(int page, int size, String categoryId, String sort) {
+//        String effectiveSort = sort != null && List.of("PublishTime", "SalesPoint", "Title").contains(sort)
+//                ? sort
+//                : "PublishTime";
+//        String effectiveCategoryId = (categoryId != null && !categoryId.trim().isEmpty())
+//                ? categoryId
+//                : String.valueOf(DEFAULT_BESTSELLER_CATEGORY_ID);
+//
+//        return fetchAladinPage(Integer.parseInt(effectiveCategoryId), page)
+//                .map(response -> {
+//                    List<AladinBookItem> books = (response.getItem() != null) ? response.getItem() : Collections.emptyList();
+//                    Integer totalResults = response.getTotalResults();
+//                    int total = totalResults != null ? totalResults : books.size();
+//                    books = books.size() > size ? books.subList(0, size) : books;
+//                    return new PaginatedAladinResponse(books, total, page, size);
+//                })
+//                .block();
+//    }
 
     private Mono<AladinApiResponse> fetchAladinPage(int categoryId, int pageNumber) {
         log.debug("알라딘 베스트셀러 API 요청: CategoryId={}, Page={}", categoryId, pageNumber);
@@ -151,7 +205,7 @@ public class AladinService {
                 .queryParam("QueryType", "Bestseller")
                 .queryParam("MaxResults", MAX_RESULTS_PER_PAGE)
                 .queryParam("start", pageNumber)
-                .queryParam("SearchTarget", "Book") // eBook -> Book
+                .queryParam("SearchTarget", "eBook") // eBook -> Book
                 .queryParam("output", "js")
                 .queryParam("Version", "20131101")
                 .queryParam("CategoryId", categoryId)
